# try_opengl

./: .gitignore  CMakeLists.txt  README.md
src/: shaders_class.cpp  shaders_interpolation.cpp  test.cpp  test1.cpp
